# drivex_bfmc2023

./: CommandNote.txt  README.md  TopicNote.txt  setup.bash
src/drivex_decision/: CMakeLists.txt  package.xml
src/drivex_decision/launch/: decision_maker.launch
src/drivex_decision/scripts/: decision_maker.py
src/drivex_description/: CMakeLists.txt  package.xml
src/drivex_description/config/: drivex_steering_params.yaml
src/drivex_description/urdf/: drivex.gazebo.macro.xacro  drivex_ackermann.urdf.xacro  drivex_ackermann_macro.urdf.xacro  drivex_wheel.urdf.xacro  sensors_macro.urdf.xacro
src/drivex_driving/: CMakeLists.txt  package.xml
src/drivex_driving/launch/: dataset_writing.launch  ml_driving.launch
src/drivex_driving/scripts/: dataset_writing.py  hyperparameter_optimization.py  ml_driving.py  model_train.py
src/drivex_main/: CMakeLists.txt  package.xml
src/drivex_main/config/: control.yaml  drivex_car.launch
src/drivex_main/launch/: main_driving.launch  map_with_cardrivex.launch
src/drivex_main/launch/originlaunchers/: all_objects.launch  map_with_all_objects.launch  map_with_all_objects_REC.launch  map_with_car.launch  map_with_car_REC.launch
src/drivex_main/launch/sublaunchers/: car.launch
src/drivex_main/worlds/: world_with_separators.world
src/drivex_showcar/: CMakeLists.txt  package.xml
src/drivex_showcar/config/: rviz.rviz
src/drivex_showcar/launch/: showcar.launch
src/drivex_showcar/scripts/: RcBrainThread.py  joy_teleop.py  keyboard.py  keyboard_teleop.py  twist_cap.py  (+2 more)
src/example/: package.xml
src/utils/: package.xml
(+21 files in other folders)
