<?xml version="1.0"?>

<package format="2">

  <name>drivex_main</name>
  <version>1.0.0</version>
  <description>The drivex_main package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com"> Rares Lemnariu </maintainer>
  <license>Bosch ECC</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
